--- a/src/requisition-approval/requisition-approval-list.html
+++ b/src/requisition-approval/requisition-approval-list.html
@@ -7,6 +7,11 @@
                 ng-options="program as program.name for program in vm.programs"
                 required>
         </select>
+        <label class="checkbox">
+            <input id="offlineSearch" type="checkbox" ng-model="vm.offline"
+                   ng-disabled="vm.isOfflineDisabled()"/>
+            {{'requisitionApproval.offline' | message}}
+        </label>
         <input class="btn btn-primary" type="submit" value="{{'requisitionApproval.search' | message}}"/>
     </form>
     <h4>{{ 'requisitionApproval.select' | message }}</h4>
@@ -30,6 +35,7 @@
                 <th>{{'requisitionApproval.endDate' | message}}</th>
                 <th>{{'requisitionApproval.dateSubmitted' | message}}</th>
                 <th>{{'requisitionApproval.emergency' | message}}</th>
+                <th>{{'requisitionApproval.offline' | message}}</th>
                 <th class="col-sticky">{{'requisitionApproval.actions' | message}}</th>
             </tr>
         </thead>
@@ -47,9 +53,15 @@
                 <td class="col-emergency">
                     <span ng-if="requisition.emergency" class="icon-ok"></span>
                 </td>
+                <td class="col-emergency">
+                    <i ng-class="{'icon-ok': requisition.$availableOffline}"></i>
+                </td>
                 <td>
                     <button class="primary" ng-click="vm.openRnr(requisition.id)">
                         {{'requisitionApproval.viewRequisition' | message}}
+                    </button>
+                    <button class="danger" ng-if="requisition.$availableOffline"
+                            ng-click="vm.removeOfflineRequisition(requisition)">{{'requisitionApproval.removeOfflineRequisition' | message}}
                     </button>
                 </td>
             </tr>
