--- a/src/requisition-batch-approval/requisition-batch-approval.html
+++ b/src/requisition-batch-approval/requisition-batch-approval.html
@@ -3,17 +3,17 @@
     <saving-indicator class="requisition-indicator" object="vm.requisitions"/>
     <table>
         <thead>
-        <tr>
-            <th class="col-sticky"></th>
-            <th class="col-sticky"></th>
+        <tr class="not-bottom">
+            <th class="col-sticky is-hidden"></th>
+            <th class="col-sticky is-hidden"></th>
             <th colspan="2" ng-repeat="requisition in vm.requisitions track by requisition.id"
                 popover="{{requisition.$error}}"
                 ng-class="{'requisition-error': requisition.$error}">
                 <div> {{requisition.facility.name}} - {{requisition.processingPeriod.name}} </div>
                 <div ng-if="requisition.$error">{{ 'requisitionBatchApproval.invalidRequisition' | message }}</div>
             </th>
-            <th></th>
-            <th></th>
+            <th class="is-hidden"></th>
+            <th class="is-hidden"></th>
         </tr>
         <tr>
             <th class="col-sticky"> {{'requisitionBatchApproval.productCode' | message}} </th>
@@ -31,31 +31,32 @@
         <tr ng-repeat="(productId, product) in vm.products track by productId">
             <td> {{product.code}} </td>
             <td> {{product.name}} </td>
-            <td ng-repeat-start="requisition in vm.requisitions track by requisition.id">
+            <td ng-repeat-start="requisition in vm.requisitions track by requisition.id" class="numeric">
                 <input positive-integer
                        ng-model="vm.lineItems[requisition.id][productId].approvedQuantity"
                        ng-disabled="!(product.requisitions | contains: requisition.id)"
                        ng-change="vm.updateLineItem(vm.lineItems[requisition.id][productId], requisition)"/>
             </td>
-            <td ng-repeat-end>
+            <td class="numeric" ng-repeat-end>
                 {{vm.lineItems[requisition.id][productId].totalCost | openlmisCurrency}}
             </td>
-            <td> {{product.totalQuantity}} </td>
-            <td> {{product.totalCost | openlmisCurrency}} </td>
+            <td class="total-cell numeric"> {{product.totalQuantity}} </td>
+            <td class="total-cell numeric"> {{product.totalCost | openlmisCurrency}} </td>
         </tr>
-        <tr>
+        <tr class="total-row">
             <td>{{'requisitionBatchApproval.total' | message}}</th></td>
             <td></td>
             <td ng-repeat-start="requisition in vm.requisitions track by requisition.id">
             </td>
-            <td ng-repeat-end>
+            <td class="numeric" ng-repeat-end>
                 {{requisition.$totalCost | openlmisCurrency}}
             </td>
             <td></td>
-            <td> {{vm.totalCost | openlmisCurrency}}</td>
+            <td class="numeric"> {{vm.totalCost | openlmisCurrency}}</td>
         </tr>
     </table>
 </div>
+<br /><br />
 <div class="openlmis-toolbar button-group" ng-if="vm.requisitions.length">
     <button ng-disabled="vm.isOffline()" ng-click="vm.sync()">{{'requisitionBatchApproval.sync' | message}}</button>
     <div class="button-group primary">
