--- a/src/requisition-approval/requisition-approval-list.html
+++ b/src/requisition-approval/requisition-approval-list.html
@@ -36,7 +36,7 @@
                 <th>{{'requisitionApproval.dateSubmitted' | message}}</th>
                 <th>{{'requisitionApproval.emergency' | message}}</th>
                 <th>{{'requisitionApproval.offline' | message}}</th>
-                <th class="col-sticky">{{'requisitionApproval.actions' | message}}</th>
+                <th class="col-sticky sticky-right">{{'requisitionApproval.actions' | message}}</th>
             </tr>
         </thead>
         <tbody>
