--- a/src/report/report-generate.html
+++ b/src/report/report-generate.html
@@ -1,5 +1,7 @@
 <h2>{{'report.chooseReportOptions' | message}}</h2>
 <form ng-submit="vm.downloadReport()">
+    <h2>{{vm.report.name}}</h2>
+
     <label for="{{parameter.name}}" ng-repeat-start="parameter in vm.report.templateParameters">{{parameter.displayName}}</label>
 
     <select id="{{parameter.name}}"
