--- a/src/requisition-batch-approval/requisition-batch-approval.html
+++ b/src/requisition-batch-approval/requisition-batch-approval.html
@@ -32,11 +32,16 @@
             <td> {{product.code}} </td>
             <td> {{product.name}} </td>
             <td ng-repeat-start="requisition in vm.requisitions track by requisition.id" class="numeric">
-                <input ng-if="(product.requisitions | contains: requisition.id) && !(vm.lineItems[requisition.id][productId].skipped)"
+                <input ng-if="(product.requisitions | contains: requisition.id) && !(vm.lineItems[requisition.id][productId].skipped) && !(vm.isInApproval(requisition))"
                        positive-integer
                        ng-model="vm.lineItems[requisition.id][productId].approvedQuantity"
                        ng-change="vm.updateLineItem(vm.lineItems[requisition.id][productId], requisition)"/>
-                <p ng-if="vm.lineItems[requisition.id][productId].skipped">{{'requisitionBatchApproval.skipped' | message}}</p>
+                <p ng-if="vm.lineItems[requisition.id][productId].skipped">
+                    {{'requisitionBatchApproval.skipped' | message}}
+                </p>
+                <p ng-if="!(vm.lineItems[requisition.id][productId].skipped) && vm.isInApproval(requisition)">
+                    {{vm.lineItems[requisition.id][productId].approvedQuantity}}
+                </p>
             </td>
             <td class="numeric" ng-repeat-end>
                 {{vm.lineItems[requisition.id][productId].totalCost | openlmisCurrency}}
