MW-379: Batch approval UI
Fixed offline workflow after new dto in batch endpoints.
Fixed unit tests that were failing after changes.
Minor fixes and refactor after dto changes.

--- a/src/requisition-approval/requisition-approval-list.html
+++ b/src/requisition-approval/requisition-approval-list.html
@@ -52,7 +52,7 @@
                     <i ng-class="{'icon-ok': requisition.$availableOffline}"></i>
                 </td>
                 <td>
-                    <button class="primary" ng-click="vm.openRnr(requisition.id)">
+                    <button ng-if="vm.isFullRequisitionAvailable(requisition.id)" class="primary" ng-click="vm.openRnr(requisition.id)">
                         {{'requisitionApproval.viewRequisition' | message}}
                     </button>
                 </td>
