--- a/src/requisition-search/requisition-search.html
+++ b/src/requisition-search/requisition-search.html
@@ -51,7 +51,9 @@
                 <th>{{'requisitionSearch.dateAuthorized' | message}}</th>
                 <th>{{'requisitionSearch.dateApproved' | message}}</th>
                 <th>{{'requisitionSearch.emergency' | message}}</th>
-                <th>{{'requisitionSearch.offline' | message}}</th>
+                <th popover="{{'requisitionSearch.offlineInfo' | message}}" popover-trigger-area="element">
+                    {{'requisitionSearch.offline' | message}}
+                </th>
                 <th class="col-sticky sticky-right">{{'requisitionSearch.actions'| message}}</th>
             </tr>
         </thead>
