--- a/src/order-view/order-view.html
+++ b/src/order-view/order-view.html
@@ -14,6 +14,10 @@
         <select id="program"
                 ng-model="vm.program"
                 ng-options="program.name for program in vm.programs"></select>
+        <label for=periodStartDate>{{'orderView.periodStart' | message}}</label>
+        <openlmis-datepicker input-id="periodStartDate" value="vm.periodStartDate" max-date="vm.periodEndDate"></openlmis-datepicker>
+        <label for=periodEndDate>{{'orderView.periodEnd' | message}}</label>
+        <openlmis-datepicker input-id="periodEndDate" value="vm.periodEndDate" min-date="vm.periodEndDate"></openlmis-datepicker>
         <input type="submit" class="btn btn-primary" value="{{'orderView.search' | message}}"/>
     </form>
     <table>
