MW-579: Approve LMIS form Screen : If the approved quantity is not editable, hide the Revert button

--- a/src/requisition-batch-approval/requisition-batch-approval.html
+++ b/src/requisition-batch-approval/requisition-batch-approval.html
@@ -83,7 +83,7 @@
         <button ng-disabled="vm.isOffline()" ng-click="vm.sync()">{{'requisitionBatchApproval.sync' | message}}</button>
         <div class="button-group primary">
             <button class="primary" ng-disabled="vm.isOffline()" form="batch-approval-form" type="submit">{{'requisitionBatchApproval.approve' | message}}</button>
-            <button class="danger" ng-click="vm.revert()">{{'requisitionBatchApproval.revert' | message}}</button>
+            <button class="danger" ng-click="vm.revert()" ng-if="!vm.requisitions.every(vm.isInApproval)">{{'requisitionBatchApproval.revert' | message}}</button>
         </div>
     </div>
 </div>
