MW-720: Bump UI component versions

--- a/src/requisition-approval/requisition-approval-list.html
+++ b/src/requisition-approval/requisition-approval-list.html
@@ -1,4 +1,5 @@
 <h2>{{'requisitionApproval.approveRequisitions' | message}}</h2>
+<h4>{{ 'requisitionApproval.instruction' | message }}</h4>
 <div class="openlmis-table-container">
     <form class="openlmis-table-filters" ng-submit="vm.search()">
         <label for=program>{{'requisitionApproval.program' | message}}</label>
