MW-734: Add button on Approve screen to default all approved quantity to 0

--- a/src/requisition-batch-approval/requisition-batch-approval.html
+++ b/src/requisition-batch-approval/requisition-batch-approval.html
@@ -81,6 +81,7 @@
     <h4 class="prices-info">{{'requisitionBatchApproval.pricesAreIndicative' | message }}</h4>
     <div class="openlmis-toolbar button-group" ng-if="vm.requisitions.length">
         <button ng-disabled="vm.isOffline()" ng-click="vm.sync()">{{'requisitionBatchApproval.sync' | message}}</button>
+        <button ng-click="vm.setAllToZero()">{{'requisitionBatchApproval.setAllToZero' | message}}</button>
         <div class="button-group primary">
             <button class="primary" ng-disabled="vm.isOffline()" form="batch-approval-form" type="submit">{{'requisitionBatchApproval.approve' | message}}</button>
             <button class="danger" ng-click="vm.revert()" ng-if="!vm.requisitions.every(vm.isInApproval)">{{'requisitionBatchApproval.revert' | message}}</button>
